# openacs

./: .gitignore  Cargo.toml  README.md
crates/cwmp-codegen/: Cargo.toml  build.rs
crates/cwmp-codegen/src/: lib.rs
crates/cwmp-typed/: Cargo.toml
crates/cwmp-typed/src/: envelope.rs  lib.rs  request.rs  response.rs
cwmp-typed/: Cargo.toml
cwmp-typed/src/: error.rs  lib.rs
cwmp-typed/src/cwmp/: mod.rs  rpc.rs  types.rs
cwmp-typed/src/envelope/: body.rs  fault.rs  header.rs  mod.rs
cwmp-xsd-schema/: Cargo.toml  build.rs
cwmp-xsd-schema/src/: lib.rs
cwmp-xsd-schema/xsd/: cwmp-1-0.xsd  xsi.xsd
cwmp-xsd-types/: Cargo.toml
cwmp-xsd-types/src/: lib.rs  xsi.rs
